# lab05

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: ci.yml
formatter_ex_lib/: CMakeLists.txt
hello_world/: CMakeLists.txt
solver/: CMakeLists.txt
src/: print.cpp
